# diffdrive-stm32

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: arm-none-eabi.cmake
src/app/: main.c  startup.c
src/app/linker/: stm32f401.ld
src/core/: complementary_filter.cpp  complementary_filter.hpp  kinematics.cpp  kinematics.hpp  odometry.cpp  odometry.hpp  pid.cpp  pid.hpp
tests/: test_complementary_filter.cpp  test_kinematics.cpp  test_odometry.cpp  test_pid.cpp
